fix: remove some bugs

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <header class="header wrapper">
     <div class="logo">RS lang</div>
     <div class="header__buttons">
-      <button type="button" class="button header__button hide" id="log-out-button">Log out</button>
+      <button type="button" class="button header__button hide" id="log-out-button">Выйти</button>
     </div>
   </header>
 
