--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                               </div>
                             <input type="checkbox" id="menu-check" class="menu-check">
                         <ul class="nav-bar nav-menu flex">
-                            <li class="nav-bar__item"><a>Зарегистрироваться</a></li>
+                            <li class="nav-bar__item"><a>Регистрация</a></li>
                             <li class="nav-bar__item"><a>Войти</a></li>
                             <li class="nav-bar__item"><a>О команде</a></li>
                             <li class="nav-bar__item"><a>О RS Lang</a></li>
