feat: change teammates info

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,15 @@
                         <img src="../src/assets/images/logo.png" alt="logo" width="100px" height="100px">
                     </div>
                     <div class="nav header__nav header__item">
-                            <div class="btn-container">
-                                <label for="menu-check" class="menu-btn" type="button" aria-label="Menu" aria-controls="navigation">
-                                  <span class="menu-btn__block">
+                        <div class="btn-container">
+                            <label for="menu-check" class="menu-btn" type="button" aria-label="Menu"
+                                aria-controls="navigation">
+                                <span class="menu-btn__block">
                                     <span class="menu-btn__inner"></span>
-                                  </span>
-                                </label>
-                              </div>
-                            <input type="checkbox" id="menu-check" class="menu-check">
+                                </span>
+                            </label>
+                        </div>
+                        <input type="checkbox" id="menu-check" class="menu-check">
                         <ul class="nav-bar nav-menu flex">
                             <li class="nav-bar__item"><a>Регистрация</a></li>
                             <li class="nav-bar__item"><a>Войти</a></li>
@@ -123,13 +124,9 @@
                                     id lorem.
                                 </p>
                                 <div class="item__person-links flex">
-                                    <img src="../src/assets/images/icons/ico_fb.svg" alt="fb" class="link-item fb-link">
-                                    <img src="../src/assets/images/icons/ico_google.svg" alt="google"
-                                        class="link-item google-link">
-                                    <img src="../src/assets/images/icons/ico_twitter.svg" alt="twitter"
-                                        class="link-item twitter-link">
-                                    <img src="../src/assets/images/icons/ico_linkedIn.svg" alt="linked-in"
-                                        class="link-item ln-link">
+                                    <a href="https://github.com/icexes" class="gh-account-name flex"> <img
+                                            src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
+                                            width="32px" height="32px"> <span>icexes</span></a>
                                 </div>
                             </div>
                         </div>
@@ -143,13 +140,9 @@
                                     id lorem.
                                 </p>
                                 <div class="item__person-links flex">
-                                    <img src="../src/assets/images/icons/ico_fb.svg" alt="fb" class="link-item fb-link">
-                                    <img src="../src/assets/images/icons/ico_google.svg" alt="google"
-                                        class="link-item google-link">
-                                    <img src="../src/assets/images/icons/ico_twitter.svg" alt="twitter"
-                                        class="link-item twitter-link">
-                                    <img src="../src/assets/images/icons/ico_linkedIn.svg" alt="linked-in"
-                                        class="link-item ln-link">
+                                    <a href="https://github.com/semenetti" class="gh-account-name flex"> <img
+                                            src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
+                                            width="32px" height="32px"> <span>semenetti</span></a>
                                 </div>
                             </div>
                         </div>
@@ -163,13 +156,9 @@
                                     id lorem.
                                 </p>
                                 <div class="item__person-links flex">
-                                    <img src="../src/assets/images/icons/ico_fb.svg" alt="fb" class="link-item fb-link">
-                                    <img src="../src/assets/images/icons/ico_google.svg" alt="google"
-                                        class="link-item google-link">
-                                    <img src="../src/assets/images/icons/ico_twitter.svg" alt="twitter"
-                                        class="link-item twitter-link">
-                                    <img src="../src/assets/images/icons/ico_linkedIn.svg" alt="linked-in"
-                                        class="link-item ln-link">
+                                    <a href="https://github.com/zaytsev-alex" class="gh-account-name flex"> <img
+                                            src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
+                                            width="32px" height="32px"> <span>zaytsev-alex</span></a>
                                 </div>
                             </div>
                         </div>
@@ -183,13 +172,9 @@
                                     id lorem.
                                 </p>
                                 <div class="item__person-links flex">
-                                    <img src="../src/assets/images/icons/ico_fb.svg" alt="fb" class="link-item fb-link">
-                                    <img src="../src/assets/images/icons/ico_google.svg" alt="google"
-                                        class="link-item google-link">
-                                    <img src="../src/assets/images/icons/ico_twitter.svg" alt="twitter"
-                                        class="link-item twitter-link">
-                                    <img src="../src/assets/images/icons/ico_linkedIn.svg" alt="linked-in"
-                                        class="link-item ln-link">
+                                    <a href="https://github.com/dmikol" class="gh-account-name flex"> <img
+                                            src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
+                                            width="32px" height="32px"> <span>dmikol</span></a>
                                 </div>
                             </div>
                         </div>
@@ -202,13 +187,9 @@
                                     ultrices velit.
                                 </p>
                                 <div class="item__person-links flex">
-                                    <img src="../src/assets/images/icons/ico_fb.svg" alt="fb" class="link-item fb-link">
-                                    <img src="../src/assets/images/icons/ico_google.svg" alt="google"
-                                        class="link-item google-link">
-                                    <img src="../src/assets/images/icons/ico_twitter.svg" alt="twitter"
-                                        class="link-item twitter-link">
-                                    <img src="../src/assets/images/icons/ico_linkedIn.svg" alt="linked-in"
-                                        class="link-item ln-link">
+                                    <a href="https://github.com/ronic404" class="gh-account-name flex"> <img
+                                            src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
+                                            width="32px" height="32px"> <span>ronic404</span></a>
                                 </div>
                             </div>
                         </div>
@@ -222,27 +203,13 @@
                                     Quisque condimentum.
                                 </p>
                                 <div class="item__person-links flex">
-                                    <img src="../src/assets/images/icons/ico_fb.svg" alt="fb" class="link-item fb-link">
-                                    <img src="../src/assets/images/icons/ico_google.svg" alt="google"
-                                        class="link-item google-link">
-                                    <img src="../src/assets/images/icons/ico_twitter.svg" alt="twitter"
-                                        class="link-item twitter-link">
-                                    <img src="../src/assets/images/icons/ico_linkedIn.svg" alt="linked-in"
-                                        class="link-item ln-link">
+                                    <a href="https://github.com/staskorotkiy92" class="gh-account-name flex"> <img
+                                            src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
+                                            width="32px" height="32px"> <span>staskorotkiy92</span></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
-            <section class="about-us">
-                <div class="our-team">
-                    <div class="teammate"></div>
-                    <div class="teammate"></div>
-                    <div class="teammate"></div>
-                    <div class="teammate"></div>
-                    <div class="teammate"></div>
-                    <div class="teammate"></div>
                 </div>
             </section>
         </div>
