feat: rebuild footer

--- a/src/index.html
+++ b/src/index.html
@@ -217,37 +217,8 @@
             <footer class="footer">
                 <div class="container footer-container flex">
                     <div class="course-info footer__item">RS School 2020Q1</div>
-                    <div class="team-github-info footer__item">
-                        <div class="gh-teammate-info">
-                            <a href="https://github.com/ronic404" class="gh-account-name flex"> <img
-                                    src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
-                                    width="32px" height="32px"> <span>ronic404</span></a>
-                        </div>
-                        <div class="gh-teammate-info">
-                            <a href="https://github.com/dmikol" class="gh-account-name flex"> <img
-                                    src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
-                                    width="32px" height="32px"> <span>dmikol</span></a>
-                        </div>
-                        <div class="gh-teammate-info">
-                            <a href="https://github.com/zaytsev-alex" class="gh-account-name flex"> <img
-                                    src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
-                                    width="32px" height="32px"> <span>zaytsev-alex</span></a>
-                        </div>
-                        <div class="gh-teammate-info">
-                            <a href="https://github.com/semenetti" class="gh-account-name flex"> <img
-                                    src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
-                                    width="32px" height="32px"> <span>semenetti</span></a>
-                        </div>
-                        <div class="gh-teammate-info">
-                            <a href="https://github.com/icexes" class="gh-account-name flex"> <img
-                                    src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
-                                    width="32px" height="32px"> <span>icexes</span></a>
-                        </div>
-                        <div class="gh-teammate-info">
-                            <a href="https://github.com/staskorotkiy92" class="gh-account-name flex"> <img
-                                    src="../src/assets/images/icons/gh.png" alt="github-icon" class="hg-icon"
-                                    width="32px" height="32px"> <span>staskorotkiy92</span></a>
-                        </div>
+                    <div class="course-logo footer__item">
+                       <img src="../src/assets/images/logo-rs.svg" alt="rs-logo" width="100px" height = "100px">
                     </div>
                 </div>
             </footer>
