feat: add presentation section

--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,17 @@
                 </div>
             </section>
         </div>
+        <div class="wrapper-inner presentation-wrapper">
+            <section class="presentation-section">
+                <div class="container">
+                    <h2 class="presentation__title">Презентация нашего проложения</h2>
+                    <div class="relation">
+                        <div class="relation__ratio"></div>
+                        <iframe class = "relation__content" src="https://www.youtube.com/embed/31j4DIpgY9U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </section>
+        </div>
         <div class="wrapper-inner">
             <section class="about-team" id="About">
                 <div class="container">
@@ -218,7 +229,7 @@
                 <div class="container footer-container flex">
                     <div class="course-info footer__item">RS School 2020Q1</div>
                     <div class="course-logo footer__item">
-                       <img src="../src/assets/images/logo-rs.svg" alt="rs-logo" width="100px" height = "100px">
+                        <img src="../src/assets/images/logo-rs.svg" alt="rs-logo" width="100px" height="100px">
                     </div>
                 </div>
             </footer>
