--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
         <div class="wrapper-inner presentation-wrapper">
             <section class="presentation-section">
                 <div class="container">
-                    <h2 class="presentation__title">Презентация нашего проложения</h2>
+                    <h2 class="presentation__title">Презентация нашего приложения</h2>
                     <div class="relation">
                         <div class="relation__ratio"></div>
                         <iframe class="relation__content" src="https://www.youtube.com/embed/31j4DIpgY9U"
