feat: add local links and id for some elements

--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
                         </div>
                         <input type="checkbox" id="menu-check" class="menu-check">
                         <ul class="nav-bar nav-menu flex">
-                            <li class="nav-bar__item"><a>Регистрация</a></li>
-                            <li class="nav-bar__item"><a>Войти</a></li>
-                            <li class="nav-bar__item"><a>О команде</a></li>
-                            <li class="nav-bar__item"><a>О RS Lang</a></li>
+                            <li class="nav-bar__item"><a href = "#" id = "Registration">Регистрация</a></li>
+                            <li class="nav-bar__item"><a href = "#" id = "Enter">Войти</a></li>
+                            <li class="nav-bar__item"><a href = "#About-team">О команде</a></li>
+                            <li class="nav-bar__item"><a href = "#About-rslang">О RS Lang</a></li>
                         </ul>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="wrapper-inner">
-            <section class="app-intro-section">
+            <section class="app-intro-section" id = "About-rslang">
                 <div class="container">
                     <h2 class="app-intro-title">RS Lang - эффективный и современный способ изучения слов английского
                         языка
@@ -121,7 +121,7 @@
             </section>
         </div>
         <div class="wrapper-inner">
-            <section class="about-team" id="About">
+            <section class="about-team" id="About-team">
                 <div class="container">
                     <h2 class="about-team__title">Наша команда</h2>
                     <p class="team-common-introducing">Мы - молодая команда начинающих веб-разработчиков,являемся
