feat: merged main page into develop

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                                 <h3 class="option-title">Следите за своим прогрессом</h3>
                             </div>
                             <div class="option-description">
-                                Мы предоставляем Вам статистику о по результатам занятий. Вы можете корректировать ваше
+                                Мы предоставляем Вам статистику по результатам занятий. Вы можете корректировать Ваше
                                 обучение
                             </div>
                         </div>
@@ -78,7 +78,7 @@
                                 <h3 class="option-title">Учитесь эффективно</h3>
                             </div>
                             <div class="option-description">
-                                Благодаря нашей меьодике повторений вы ваше обучение будет максимально эффективно
+                                Благодаря методике интервальных повторений Ваше обучение будет максимально эффективным.
                             </div>
                         </div>
                         <div class="intro-options__item column-layout__item column-layout-6 column-layout-12">
@@ -87,16 +87,16 @@
                                 <h3 class="option-title">Не скучайте</h3>
                             </div>
                             <div class="option-description">
-                                Вам будет всегда интересно. Вы сможете выбрать обучающую игру по вашему вкусу. Каждая
-                                игра является эффективным иструментом обучения, позволяющая запоминать слова быстрее и
-                                лучше.
+                                Вам будет всегда интересно. Вы сможете выбрать обучающую игру по Вашему вкусу. Каждая
+                                игра является эффективным иструментом обучения, позволяющим запоминать слова быстро и
+                                хорошо.
                             </div>
                         </div>
                         <div class="intro-options__item column-layout__item column-layout-6 column-layout-12">
                             <div class="option-header">
                                 <img src="assets/images/icons/responsive.png" alt="icon-devices"
                                     class="option-title-icon">
-                                <h3 class="option-title">Всегда с вами</h3>
+                                <h3 class="option-title">Всегда с Вами</h3>
                             </div>
                             <div class="option-description">
                                 Занимайтесь в любое удобное Вам время и в любом месте.
