feat: add folders and rename

--- a/src/audio-call.html
+++ b/src/audio-call.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="src/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Audio-mini-game</title>
 </head>
 <body>
-    <script src="src/script.js"></script>
+    <script src="js/audio-call/audio-call.js"></script>
 </body>
 </html>
