feat: add records

--- a/speakit/src/index.html
+++ b/speakit/src/index.html
@@ -45,9 +45,13 @@
           <div class="errors-item"></div>
           <p class="succes">Выучено<span class="succes-num"></span></p>
           <div class="succes-item"></div>
+          <div class="history none">
+            <p>История</p>
+          </div>
           <div class="btns btns-res">
             <a href="#" class="btn btn-res return">Return</a>
             <a href="#" class="btn btn-res new-game">New game</a>
+            <a href="#" class="btn btn-res records">Records</a>
           </div>
         </div>
       </div>
