--- a/speakit/src/index.html
+++ b/speakit/src/index.html
@@ -8,7 +8,7 @@
     <title>Speakit</title>
   </head>
   <body>
-    <main class="main">
+    <main class="main speakit">
       <div class="intro">
         <h1 class="title">SpeakIt</h1>
         <a href="#" class="btn intro-btn">Start</a>
