--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../src/assets/images/favicon.ico" type="image/x-icon">
     <title>RS Lang</title>
 </head>
 
